--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Generate combinations of array elements",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,10 @@
   "bugs": {
     "url": "https://github.com/ramalhovfc/array-combinator/issues"
   },
-  "homepage": "https://github.com/ramalhovfc/array-combinator#readme"
+  "homepage": "https://github.com/ramalhovfc/array-combinator#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2017": "^6.24.1",
+    "mocha": "^5.2.0"
+  }
 }
