update readme and tests. reject malformed inputs

--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   },
   "homepage": "https://github.com/ramalhovfc/array-combinator#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2017": "^6.24.1",
     "mocha": "^5.2.0"
-  }
+  },
+  "dependencies": {}
 }
